# protoc

./: protoc2.VC.VC.opendb  protoc2.sln
protobuf-3.17.2-release/: label.proto  label1.proto  label1_pb2.py  label_pb2.py  libprotobuf-lite.lib
protoc2/: label.pb - 旧的.cc  label.pb - 旧的.h  label.pb.cc  label.pb.h  protoc2.vcxproj  protoc2.vcxproj.filters  protoctest.cpp  protoctest2.cpp  protoctest3.cpp  test.cpp
protoc2/base/dfx/hilog_lite/: CMakeLists.txt
protoc2/base/dfx/hilog_lite/frameworks/mini/: hiview_fifo_log.c  hiview_fifo_log.h  hiview_log.c  hiview_log_limit.c  hiview_log_limit.h  hiview_output_log.c  hiview_output_log.h
protoc2/base/dfx/hilog_lite/interfaces/native/innerkits/hilog/: hilog_cp.h  hilog_trace.h  hiview_log.h  log.h
protoc2/base/dfx/hilog_lite/interfaces/native/kits/hilog/: log.h
protoc2/base/dfx/hilog_lite/interfaces/native/kits/hilog_lite/: dfx_log.h  hiview_log.h  log.h
protoc2/base/dfx/hiview_lite/: CMakeLists.txt  hiview_cache.c  hiview_cache.h  hiview_config.c  hiview_config.h  hiview_def.h  hiview_file.c  hiview_file.h  hiview_service.c  hiview_service.h  hiview_util.c  hiview_util.h
protoc2/base/dfx/shell/: CMakeLists.txt
protoc2/base/dfx/shell/include/: shell.h  shell_cfg.h  shell_service.h
protoc2/base/dfx/shell/source/: shell.c  shell_cmd_list.c  shell_ext.c  shell_ext.h  shell_service.c
protoc2/base/event_hub/: CMakeLists.txt
protoc2/base/event_hub/include/: event_hub_service.h
protoc2/base/event_hub/source/: event_hub_api.c  event_hub_priv.h  event_hub_service.c
protoc2/base/ohos_adapter/: CMakeLists.txt  memory_adapter.h  mutex_adapter.h  queue_adapter.h  sem_adapter.h  thread_adapter.h  time_adapter.h  timer_adapter.h
protoc2/base/ohos_adapter/posix/: kal.c  kal.h  lock_free_queue.c  lock_free_queue.h  memory_adapter.c  mutex_adapter.c  queue_adapter.c  sem_adapter.c  thread_adapter.c  time_adapter.c  timer_adapter.c
protoc2/base/ohos_defs/: CMakeLists.txt  kv_store.h  ohos_errno.h  ohos_init.c  ohos_init.h  ohos_modules.def  ohos_types.h  utils_config.h  utils_file.h  utils_list.h
protoc2/base/samgr_lite/: CMakeLists.txt
protoc2/base/samgr_lite/interfaces/innerkits/: distributed_service_interface.h
protoc2/base/samgr_lite/interfaces/kits/communication/broadcast/: broadcast_interface.h
protoc2/base/samgr_lite/interfaces/kits/registry/: iproxy_client.h  iproxy_server.h  registry.h
protoc2/base/samgr_lite/interfaces/kits/samgr/: feature.h  iunknown.h  message.h  samgr_common.h  samgr_lite.h  service.h
protoc2/base/samgr_lite/samgr/: CMakeLists.txt
protoc2/base/samgr_lite/samgr/registry/: service_registry.c  service_registry.h
protoc2/base/samgr_lite/samgr/source/: common.c  feature.c  feature_impl.h  iunknown.c  message.c  message_inner.h  samgr_lite.c  samgr_lite_inner.h  service.c  service_impl.h  task_manager.c  task_manager.h
protoc2/base/samgr_lite/samgr_timer/: CMakeLists.txt
protoc2/base/samgr_lite/samgr_timer/inc/: samgr_timer.h
protoc2/base/samgr_lite/samgr_timer/src/: samgr_timer.c  samgr_timer_priv.h  timer_api.c
protoc2/base/startup/bootstrap_lite/services/: CMakeLists.txt
protoc2/base/startup/bootstrap_lite/services/source/: bootstrap_service.c  bootstrap_service.h  core_main.h  system_init.c
protoc2/lib/: libprotobuf-lite.lib
protoc2/src/: Makefile.in
protoc2/x64/Debug/: vc140.idb
protoc2/x64/Debug/protoc2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  protoc2.lastbuildstate
protoc2/x64/Release/protoc2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  protoc2.lastbuildstate
x64/Release/: protoc2.iobj  protoc2.ipdb
